tests/compile-fail/unnamed_fields_not_supported.rs
use clap::Parser;
use clap_layers::Layered;

#[derive(Parser, Layered)]
struct Config(u16);

fn main() {}
